update auctions
