# docs/swagger.json
@@ -45,16 +45,14 @@
                         "description": "Unauthorized"
                     }
                 }
-            }
-        },
-        "/auction-histories/auction/{id}": {
-            "get": {
+            },
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get Auction History By Auction Id",
+                "description": "Create Auction History",
                 "consumes": [
                     "application/json"
                 ],
@@ -64,14 +62,16 @@
                 "tags": [
                     "Auction History"
                 ],
-                "summary": "Get Auction History By Auction Id",
+                "summary": "Create Auction History",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Auction Id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "Auction History",
+                        "name": "auction",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AuctionHistoryCreateRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -200,6 +200,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Auction History",
+                        "name": "auction",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AuctionHistoryUpdateRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -1296,26 +1305,62 @@
         "request.AuctionCreateRequest": {
             "type": "object",
             "required": [
-                "product",
-                "user_id"
+                "name",
+                "price",
+                "productName",
+                "userId"
             ],
             "properties": {
-                "bidders_count": {
+                "biddersCount": {
                     "type": "integer"
                 },
-                "end_at": {
+                "description": {
                     "type": "string"
                 },
-                "last_price": {
+                "endAt": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "lastPrice": {
                     "type": "integer"
                 },
-                "product": {
-                    "$ref": "#/definitions/request.Product"
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "productName": {
+                    "type": "string"
                 },
                 "status": {
                     "type": "string"
                 },
-                "user_id": {
+                "userId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "request.AuctionHistoryCreateRequest": {
+            "type": "object",
+            "properties": {
+                "auctionId": {
+                    "type": "integer"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "userId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "request.AuctionHistoryUpdateRequest": {
+            "type": "object",
+            "properties": {
+                "price": {
                     "type": "integer"
                 }
             }
@@ -1323,16 +1368,19 @@
         "request.AuctionUpdateRequest": {
             "type": "object",
             "properties": {
-                "end_at": {
+                "endAt": {
                     "type": "string"
                 },
-                "last_price": {
+                "lastPrice": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 },
                 "status": {
                     "$ref": "#/definitions/entity.Status"
                 },
-                "user_id": {
+                "userId": {
                     "type": "integer"
                 }
             }
@@ -1357,27 +1405,6 @@
                 },
                 "password": {
                     "type": "string"
-                }
-            }
-        },
-        "request.Product": {
-            "type": "object",
-            "required": [
-                "name",
-                "price"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "image": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "integer"
                 }
             }
         },
