# model/entity/auction_history-entity.go
@@ -11,10 +11,10 @@ import (
 // @Description with auction id, user id, price, created at, updated at, and deleted at
 type AuctionHistory struct {
 	ID        uint           `json:"id" gorm:"primaryKey"`
-	AuctionID uint           `json:"auction_id"`
-	Auction   Auction        `json:"-"`
-	UserId    uint           `json:"user_id"`
-	User      User           `json:"-"`
+	AuctionID uint           `json:"-"`
+	Auction   Auction        `json:"auction"`
+	UserId    uint           `json:"-"`
+	User      User           `json:"user"`
 	Price     int            `json:"price"`
 	CreatedAt time.Time      `json:"created_at"`
 	UpdatedAt time.Time      `json:"updated_at"`
